--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -1559,7 +1559,9 @@ Ah, the crown jewel of Emacs 👑.
             org-todo-keyword-faces `(("CANCELED"
                                       :foreground ,(catppuccin-get-color 'red))
                                      ("WAIT"
-                                      :foreground ,(catppuccin-get-color 'yellow))))
+                                      :foreground ,(catppuccin-get-color 'yellow)))
+            org-refile-targets     '((nil . (:maxlevel . 2))
+                                     (org-agenda-files . (:maxlevel 2))))
     (custom-set-faces
      `(org-headline-done ((t :inherit nil
                              :italic t
