fix(home/emacs): only enable popup minibuffer on daemon

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -279,51 +279,52 @@ Recursive minibuffers allow usage of the minibuffer when in the minibuffer, "rec
 
 I like using a lot of different frames, since it allows me to take full advantage of tiling window managers. However, this makes the minibuffer annoying to use, since it's limited to the frame size by default. This black magic allows using an entirely separate frame for the minibuffer, activating it dynamically using Hyprland's special workspaces. We manage the frame ourselves instead of using Emacs' built-in ~minibuffer~ frame parameter so that the echo area still stays on each frame. Additionally, this setup breaks [[help:minibuffer-selected-window][minibuffer-selected-window]] (which subsequently breaks [[*Consult][Consult]] preview), so we re-implement the C code in Emacs Lisp; this surely won't cause /any/ impossible-to-debug issues in the future 😅.
 #+begin_src elisp
-  (setopt default-minibuffer-frame (make-frame '((window-system . pgtk)
-                                                 (minibuffer . only)
-                                                 (title . "MINIBUFFER"))))
-  (defvar my/minibuffer-selected-window nil)
+  (when (daemonp)
+    (setopt default-minibuffer-frame (make-frame '((window-system . pgtk)
+                                                   (minibuffer . only)
+                                                   (title . "MINIBUFFER"))))
+    (defvar my/minibuffer-selected-window nil)
 
-  (defsubst my/toggle-minibuffer-workspace ()
-    "Toggle Hyprland's `minibuffer' special workspace."
-    (call-process "hyprctl" nil 0 nil
-                  "dispatch" "togglespecialworkspace" "minibuffer"))
+    (defsubst my/toggle-minibuffer-workspace ()
+      "Toggle Hyprland's `minibuffer' special workspace."
+      (call-process "hyprctl" nil 0 nil
+                    "dispatch" "togglespecialworkspace" "minibuffer"))
 
-  (defun my/minibuffer-workspace-active-p ()
-    "Return non-nil if the minibuffer Hyprland workspace is currently active."
-    (let* ((json (with-temp-buffer
-                   ;; `hyprctl activeworkspace' ignores special workspaces.
-                   (call-process "hyprctl" nil t nil
-                                 "activewindow" "-j")
-                   (goto-char (point-min))
-                   (json-parse-buffer :object-type 'alist)))
-           (workspace (map-nested-elt json '(workspace name))))
-      (string= workspace "special:minibuffer")))
+    (defun my/minibuffer-workspace-active-p ()
+      "Return non-nil if the minibuffer Hyprland workspace is currently active."
+      (let* ((json (with-temp-buffer
+                     ;; `hyprctl activeworkspace' ignores special workspaces.
+                     (call-process "hyprctl" nil t nil
+                                   "activewindow" "-j")
+                     (goto-char (point-min))
+                     (json-parse-buffer :object-type 'alist)))
+             (workspace (map-nested-elt json '(workspace name))))
+        (string= workspace "special:minibuffer")))
 
-  (define-advice read-from-minibuffer (:around (fn &rest args) use-popup-frame)
-    "Activate a separate minibuffer frame while reading from the minibuffer."
-    (let ((orig-frame (selected-frame)))
-      (unwind-protect
-          (progn
-            (when (zerop (minibuffer-depth))
-              (setq my/minibuffer-selected-window (selected-window)))
-            ;; Could already be active if in a recursive minibuffer.
-            (unless (my/minibuffer-workspace-active-p)
-              (my/toggle-minibuffer-workspace))
-            (select-frame-set-input-focus default-minibuffer-frame)
-            (apply fn args))
-        (when (and (zerop (minibuffer-depth))
-                   (my/minibuffer-workspace-active-p))
-          (my/toggle-minibuffer-workspace)
-          (select-frame-set-input-focus orig-frame)))))
+    (define-advice read-from-minibuffer (:around (fn &rest args) use-popup-frame)
+      "Activate a separate minibuffer frame while reading from the minibuffer."
+      (let ((orig-frame (selected-frame)))
+        (unwind-protect
+             (progn
+              (when (zerop (minibuffer-depth))
+                (setq my/minibuffer-selected-window (selected-window)))
+              ;; Could already be active if in a recursive minibuffer.
+              (unless (my/minibuffer-workspace-active-p)
+                (my/toggle-minibuffer-workspace))
+              (select-frame-set-input-focus default-minibuffer-frame)
+              (apply fn args))
+          (when (and (zerop (minibuffer-depth))
+                     (my/minibuffer-workspace-active-p))
+            (my/toggle-minibuffer-workspace)
+            (select-frame-set-input-focus orig-frame)))))
 
-  (define-advice minibuffer-selected-window (:override () popup-fix)
-    "Return window selected just before minibuffer window was selected.
+    (define-advice minibuffer-selected-window (:override () popup-fix)
+      "Return window selected just before minibuffer window was selected.
   Return nil if the selected window is not a minibuffer window."
-    (when (and (> (minibuffer-depth) 0)
-               (minibufferp)
-               (window-live-p my/minibuffer-selected-window))
-      my/minibuffer-selected-window))
+      (when (and (> (minibuffer-depth) 0)
+                 (minibufferp)
+                 (window-live-p my/minibuffer-selected-window))
+        my/minibuffer-selected-window)))
 #+end_src
 
 ** Comint
