feat(home/emacs): save ement sessions

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -2487,7 +2487,8 @@ Spritz-like speedreading for Emacs 💨.
   (add-hook 'ement-room-compose-hook #'corfu-mode)
 
   (after! ement
-    (setopt ement-room-use-variable-pitch t
+    (setopt ement-save-sessions t
+            ement-room-use-variable-pitch t
             ement-room-send-message-filter #'ement-room-send-org-filter))
 #+end_src
 
