feat(home/emacs): use pop up frames
Still lots of rough edges to deal with 😅!

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -339,6 +339,12 @@ I like using a lot of different frames, since it allows me to take full advantag
           compilation-scroll-output 'first-error)
 #+end_src
 
+** Frame Usage
+I want to use frames rather than windows for most operations, so we configure [[help:display-buffer-base-action][display-buffer-base-action]] to display buffers in frames by default.
+#+begin_src elisp
+  (setopt display-buffer-base-action '(display-buffer-pop-up-frame))
+#+end_src
+
 * Appearance
 ** Line Numbers
 #+begin_src elisp
