--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -819,7 +819,9 @@ Repeat map for candidate navigation.
 
   (after! embark
     ;; Needed for `eww-download-directory' in `embark-download-url'.
-    (require 'eww))
+    (require 'eww)
+    (setopt embark-verbose-indicator-display-action
+            '(display-buffer-at-bottom (window-height . fit-window-to-buffer))))
 #+end_src
 
 ** Corfu
