feat(home/emacs): use ibuffer instead of list-buffers

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -1359,6 +1359,14 @@ The repository comes with many different files for "sources", that each have var
     "+" #'expreg-contract)
 #+end_src
 
+** Ibuffer
+#+begin_src elisp
+  (bind-key [remap list-buffers] #'ibuffer)
+
+  (after! ibuffer
+    (setopt ibuffer-old-time 2))
+#+end_src
+
 * Denote
 We set [[help:denote-directory][denote-directory]] early since other parts of my configuration use it as well.
 #+begin_src elisp
