feat(home/emacs): organize denote utility functions, add create

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -1370,27 +1370,13 @@ The repository comes with many different files for "sources", that each have var
 * Denote
 We set [[help:denote-directory][denote-directory]] early since other parts of my configuration use it as well.
 #+begin_src elisp
-  (defun my/denote-ingest-file (arg)
-    "Rename a file using `denote-rename-file', then move it into
-  `denote-directory'. With prefix argument ARG, copy the file instead of moving
-  it."
-    (interactive "P")
-    (let* ((fn (if arg #'copy-file #'rename-file))
-           (filename (expand-file-name (read-file-name "Ingest File: ")))
-           (basename (file-name-nondirectory filename))
-           (target (expand-file-name basename (denote-directory))))
-      (funcall fn filename target)
-      (apply #'denote-rename-file target
-             (denote--rename-get-file-info-from-prompts-or-existing target))))
-
-  (bind-keys :map my/notes-map
+  (bind-keys ("C-c X" . org-capture)
+             :map my/notes-map
              ("b" . denote-backlinks)
              ("f" . denote-open-or-create)
-             ("I" . my/denote-ingest-file)
              ("l" . denote-link-or-create)
              ("L" . denote-org-extras-link-to-heading)
              ("k" . denote-rename-file-keywords))
-  (bind-key "C-c X" #'org-capture)
 
   (add-hook 'dired-mode-hook #'denote-dired-mode-in-directories)
 
@@ -1406,7 +1392,7 @@ We set [[help:denote-directory][denote-directory]] early since other parts of my
                                     "reference" "thought" "journal")
             denote-date-prompt-use-org-read-date t
             denote-backlinks-show-context t
-            denote-prompts '(title date keywords template)
+            denote-prompts '(title keywords template)
             denote-dired-directories (list denote-directory)
             denote-dired-directories-include-subdirectories t
             denote-templates `((default . "")
@@ -1421,6 +1407,35 @@ We set [[help:denote-directory][denote-directory]] early since other parts of my
 
   (after! org-capture
     (require 'denote))
+#+end_src
+
+** Utility Functions
+#+begin_src elisp
+  (defun my/denote-ingest-file (arg)
+    "Rename a file using `denote-rename-file', then move it into
+  `denote-directory'. With prefix argument ARG, copy the file instead of moving
+  it."
+    (interactive "P")
+    (require 'denote)
+    (let* ((fn (if arg #'copy-file #'rename-file))
+           (filename (expand-file-name (read-file-name "Ingest File: ")))
+           (basename (file-name-nondirectory filename))
+           (target (expand-file-name basename (denote-directory)))
+           (denote-prompts (cons 'date denote-prompts)))
+      (funcall fn filename target)
+      (apply #'denote-rename-file target
+             (denote--rename-get-file-info-from-prompts-or-existing target))))
+
+  (defun my/denote-quick-create ()
+    "Create a new Denote note prompting only for title."
+    (interactive)
+    (require 'denote)
+    (let ((denote-prompts '(title)))
+      (call-interactively #'denote-create-note)))
+
+  (bind-keys :map my/notes-map
+             ("n" . my/denote-quick-create)
+             ("I" . my/denote-ingest-file))
 #+end_src
 
 ** Thought Stack
