--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -598,6 +598,7 @@ I have no idea where else to put this, so here we are ¯\_(ツ)_/¯.
 #+end_src
 
 ** God Mode
+Instead of using God Mode's exemption system, we manually disable it so that it can still be enabled within those buffers (e.g. for global shortcuts).
 #+begin_src elisp
   (bind-key "<escape>" #'god-mode-all)
 
@@ -614,12 +615,21 @@ I have no idea where else to put this, so here we are ¯\_(ツ)_/¯.
     (when (not buffer-read-only)
       (setopt cursor-type 'bar)))
 
+  (defun my/disable-god-mode ()
+      "Disable God Mode."
+      (god-mode-all -1))
+
   (add-hook 'god-mode-enabled-hook #'my/on-enter-god-mode)
   (add-hook 'god-mode-disabled-hook #'my/on-exit-god-mode)
 
   (after! god-mode
-    (setopt god-exempt-major-modes '(magit-status-mode calc-mode)
-            god-exempt-predicates '(god-exempt-mode-p))
+    (setopt god-exempt-major-modes nil
+            god-exempt-predicates nil)
+
+    (dolist (hook '(magit-mode-hook
+                    calc-mode-hook
+                    git-commit-mode-hook))
+      (add-hook hook #'my/disable-god-mode))
 
     (custom-set-faces
      '(god-mode-lighter ((t (:inherit error)))))
