--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -606,14 +606,14 @@ Instead of using God Mode's exemption system, we manually disable it so that it 
     "Stylize mode-line and cursor when entering `god-mode'."
     (set-face-attribute 'mode-line-active nil
                         :foreground (catppuccin-color 'flamingo))
-    (setopt cursor-type t))
+    (setq-local cursor-type t))
 
   (defun my/on-exit-god-mode ()
     "Un-stylize mode-line and cursor when exiting `god-mode'."
     (set-face-attribute 'mode-line-active nil
                         :foreground (catppuccin-color 'text))
     (when (not buffer-read-only)
-      (setopt cursor-type 'bar)))
+      (setq-local cursor-type 'bar)))
 
   (defun my/disable-god-mode ()
       "Disable God Mode."
