feat(home/emacs): add org-agenda-mode to god mode disable list

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -628,7 +628,8 @@ Instead of using God Mode's exemption system, we manually disable it so that it 
 
     (dolist (hook '(magit-mode-hook
                     calc-mode-hook
-                    git-commit-mode-hook))
+                    git-commit-mode-hook
+                    org-agenda-mode-hook))
       (add-hook hook #'my/disable-god-mode))
 
     (custom-set-faces
