fix(home/emacs): use hyprctl --instance flag
Finally, no more wacky HYPRCTL_INSTANCE_SIGNATURE race conditions 😌.

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -288,6 +288,7 @@ I like using a lot of different frames, since it allows me to take full advantag
     (defsubst my/toggle-minibuffer-workspace ()
       "Toggle Hyprland's `minibuffer' special workspace."
       (call-process "hyprctl" nil 0 nil
+                    "--instance" "0"
                     "dispatch" "togglespecialworkspace" "minibuffer"))
 
     (defun my/minibuffer-workspace-active-p ()
