fix(home/emacs): use hyprctl instance flag for other call too

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -296,6 +296,7 @@ I like using a lot of different frames, since it allows me to take full advantag
       (let* ((json (with-temp-buffer
                      ;; `hyprctl activeworkspace' ignores special workspaces.
                      (call-process "hyprctl" nil t nil
+                                   "--instance" "0"
                                    "activewindow" "-j")
                      (goto-char (point-min))
                      (json-parse-buffer :object-type 'alist)))
