feat(home/emacs): tweak more org settings

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -1696,6 +1696,9 @@ Ah, the crown jewel of Emacs 👑.
             org-enforce-todo-dependencies          t
             org-list-allow-alphabetical            t
             org-edit-src-auto-save-idle-delay      5
+            org-cycle-separator-lines              0
+            org-blank-before-new-entry             '((heading . t)
+                                                     (plain-list-item . auto))
             org-todo-keyword-faces `(("CANCELED"
                                       :foreground ,(catppuccin-get-color 'red))
                                      ("WAIT"
