fix(home/emacs): make org-code inherit from fixed-pitch

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -448,6 +448,7 @@ Some extra tweaks:
    `(org-property-value        ((t :inherit shadow)))
    `(org-indent                ((t :inherit (fixed-pitch org-hide))))
    `(org-table                 ((t :inherit fixed-pitch)))
+   `(org-code                  ((t :inherit fixed-pitch)))
    `(org-block                 ((t :inherit fixed-pitch
                                    :foreground unspecified)))
    `(org-agenda-structure      ((t :height 1.3))))
