--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -1428,7 +1428,7 @@ We set [[help:denote-directory][denote-directory]] early since other parts of my
     ;; Illegal characters on Android
     (setopt denote-excluded-punctuation-extra-regexp (rx (* (or "<" ">")))
             denote-excluded-directories-regexp "publish/"
-            denote-known-keywords '("quest" "person" "needy" "private"
+            denote-known-keywords '("agenda" "person" "needy" "private"
                                     "reference" "thought" "journal")
             denote-date-prompt-use-org-read-date t
             denote-backlinks-show-context t
