--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -421,14 +421,9 @@ Reduce fringe size on the right (left is used for various indicators).
 
 ** Theme
 #+begin_src elisp
-  (require 'catppuccin-theme)
-  (setopt catppuccin-flavor 'macchiato
-          catppuccin-italic-comments t
-          catppuccin-height-doc-title 2.0
-          catppuccin-height-title-1 1.3
-          catppuccin-height-title-2 1.3
-          catppuccin-height-title-3 1.3)
-  (load-theme 'catppuccin :no-confirm)
+  (require 'doom-themes)
+  (load-theme 'doom-tomorrow-night :no-confirm)
+  (doom-themes-org-config)
 #+end_src
 
 Some extra tweaks:
