feat(home/emacs): style org-scheduled-today face
I don't like the default styling on this theme ¯\_(ツ)_/¯.

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -1788,7 +1788,8 @@ Ah, the crown jewel of Emacs 👑.
                                         (0.5 . org-upcoming-deadline)
                                         (0.0 . org-upcoming-distant-deadline)))
     (custom-set-faces
-     `(org-imminent-deadline         ((t (:foreground ,(doom-color 'red) :weight semibold))))
+     `(org-scheduled-today           ((t (:foreground ,(doom-color 'orange) :weight bold))))
+     `(org-imminent-deadline         ((t (:foreground ,(doom-color 'red)    :weight semibold))))
      `(org-upcoming-deadline         ((t (:foreground ,(doom-color 'yellow) :weight medium))))
      `(org-upcoming-distant-deadline ((t (:foreground ,(doom-color 'yellow) :weight light))))))
 #+end_src
