--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -209,6 +209,11 @@ Don't make me type an entire word and hit enter for confirmation prompts, I know
 ** Smartparens
 #+begin_src elisp
   (add-hook 'prog-mode-hook #'smartparens-mode)
+
+  (after! smartparens
+    (sp-with-modes sp-lisp-modes
+      (sp-local-pair "'" nil :actions nil)
+      (sp-local-pair "`" "'" :when '(sp-in-string-p sp-in-comment-p))))
 #+end_src
 
 ** Scrolling
