feat(home/emacs): enable "default" smartparens binds

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -211,6 +211,8 @@ Don't make me type an entire word and hit enter for confirmation prompts, I know
   (add-hook 'prog-mode-hook #'smartparens-mode)
 
   (after! smartparens
+    (sp-use-smartparens-bindings)
+    
     (sp-with-modes sp-lisp-modes
       (sp-local-pair "'" nil :actions nil)
       (sp-local-pair "`" "'" :when '(sp-in-string-p sp-in-comment-p))))
