--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -622,7 +622,9 @@ I have no idea where else to put this, so here we are ¯\_(ツ)_/¯.
     "n" #'next-line
     "p" #'previous-line
     "f" #'forward-char
-    "b" #'backward-char)
+    "b" #'backward-char
+    "e" #'end-of-visual-line
+    "a" #'beginning-of-visual-line)
 
   (defvar-keymap my/word-repeat-map
     :repeat t
@@ -1681,15 +1683,19 @@ Ah, the crown jewel of Emacs 👑.
 
 ** Repeat Maps
 #+begin_src elisp
+  (defvar-keymap my/org-movement-repeat-map
+    :repeat t
+    "n" #'next-line
+    "p" #'previous-line
+    "f" #'forward-char
+    "b" #'backward-char
+    "e" #'org-beginning-of-line
+    "a" #'org-end-of-line)
+
   (defvar-keymap my/org-sentence-repeat-map
     :repeat t
     "e" #'org-forward-sentence
     "a" #'org-backward-sentence)
-
-  (defvar-keymap my/org-line-repeat-map
-    :repeat t
-    "a" #'org-beginning-of-line
-    "e" #'org-end-of-line)
 
   (defvar-keymap my/org-element-repeat-map
     :repeat t
