--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -366,6 +366,11 @@ Deal with various things that don't play nice with this setup.
                `(,(rx "*Capture*")
                  display-buffer-pop-up-window))
 
+  ;; Org LaTeX preview spams frames without this
+  (add-to-list 'display-buffer-alist
+               `(,(rx "*Org Preview LaTeX Output*")
+                 display-buffer-pop-up-window))
+
   ;; Sly
   (add-to-list 'display-buffer-alist
                '((major-mode . sly-mrepl-mode)
