feat(home/emacs): set typescript indentation to 4

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -2282,6 +2282,9 @@ Common Lisp.
 #+begin_src elisp
   (add-to-list 'auto-mode-alist '("\\.ts\\'" . typescript-ts-mode))
 
+  (after! typescript-ts-mode
+    (setopt typescript-ts-mode-indent-offset 4))
+
   (after! apheleia
     (add-to-list 'apheleia-formatters
                  '(biome "apheleia-npx" "biome" "format"
