fix(home/emacs): don't popup windows for sly stickers

--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -375,6 +375,14 @@ Deal with various things that don't play nice with this setup.
   (add-to-list 'display-buffer-alist
                '((major-mode . sly-mrepl-mode)
                  display-buffer-reuse-window))
+  (add-to-list 'display-buffer-alist
+               '((major-mode . sly-stickers--replay-mode)
+                 display-buffer-pop-up-window))
+  ;; Going through stickers repeatedly opens frames without this.
+  (define-advice sly-stickers--find-and-flash
+      (:around (fn &rest args) popup-fix)
+    (let ((display-buffer-overriding-action '(display-buffer-reuse-window)))
+      (apply fn args)))
 #+end_src
 
 * Appearance
