--- a/home/emacs/config.org
+++ b/home/emacs/config.org
@@ -1692,8 +1692,8 @@ Ah, the crown jewel of Emacs 👑.
     "p" #'previous-line
     "f" #'forward-char
     "b" #'backward-char
-    "e" #'org-beginning-of-line
-    "a" #'org-end-of-line)
+    "a" #'org-beginning-of-line
+    "e" #'org-end-of-line)
 
   (defvar-keymap my/org-sentence-repeat-map
     :repeat t
